[gd_scene load_steps=19 format=3 uid="uid://w4fkroo78can"]

[ext_resource type="Texture2D" uid="uid://cjh6ymwxvvcos" path="res://Assets/Art/black room.jpg" id="1_5n1j4"]
[ext_resource type="Script" path="res://scenes/main_scene.gd" id="1_p1kej"]
[ext_resource type="Script" path="res://Resources/LevelResource.gd" id="2_2hwyq"]
[ext_resource type="PackedScene" uid="uid://cflsr37upnk6y" path="res://microgame/test/clicky_game.tscn" id="2_c60uo"]
[ext_resource type="Texture2D" uid="uid://b8h1go2aktdv8" path="res://Assets/Art/television.png" id="2_glg3e"]
[ext_resource type="Shader" path="res://Assets/Shaders/vhs_shader.gdshader" id="3_a3ver"]
[ext_resource type="FontFile" uid="uid://bkyjfo6cxbj1v" path="res://Assets/Fonts/BLASTIMO SANS.ttf" id="3_r5jth"]
[ext_resource type="FontFile" uid="uid://cbqqt0826iv0r" path="res://Assets/Fonts/Gameplay.ttf" id="8_a3d1u"]
[ext_resource type="Texture2D" uid="uid://cuv5x0au2o41n" path="res://Assets/Art/landscape-photography-tutorials - Copy.jpg" id="8_qu7bs"]
[ext_resource type="Script" path="res://scenes/Default_scripts/animation_player.gd" id="9_fjfyb"]
[ext_resource type="AudioStream" uid="uid://bvj05oxdwgkjy" path="res://Assets/SFX/tv-static-noise-291374.mp3" id="11_orsa2"]
[ext_resource type="AudioStream" uid="uid://dxwmy3meiev8q" path="res://Assets/SFX/arcade-ride-vens-adams-main-version-27955-01-45.mp3" id="12_lgb03"]

[sub_resource type="Resource" id="Resource_jmpic"]
script = ExtResource("2_2hwyq")
minigames = Array[PackedScene]([ExtResource("2_c60uo")])

[sub_resource type="ShaderMaterial" id="ShaderMaterial_os521"]
shader = ExtResource("3_a3ver")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.1
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.15
shader_parameter/resolution = Vector2(1920, 1080)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.0
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.1
shader_parameter/aberration = 0.00500005
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 1.0

[sub_resource type="Theme" id="Theme_ujtui"]
default_font = ExtResource("3_r5jth")

[sub_resource type="Animation" id="Animation_dfqaa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sc2y5"]
resource_name = "DEFAULT"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.133333, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvxdg"]
_data = {
"DEFAULT": SubResource("Animation_sc2y5"),
"RESET": SubResource("Animation_dfqaa")
}

[node name="MainScene" type="Node" node_paths=PackedStringArray("VHSShaderRect", "Screen", "StaticNoiseFX", "MainMenuTheme")]
script = ExtResource("1_p1kej")
microgames = SubResource("Resource_jmpic")
VHSShaderRect = NodePath("TVTextureRect/MarginContainer/AllScreen/VHSShaderRect")
Screen = NodePath("TVTextureRect/MarginContainer/AllScreen/Screen")
StaticNoiseFX = NodePath("AudioPlayers/StaticNoise")
MainMenuTheme = NodePath("AudioPlayers/MainMenuTheme")

[node name="BlackRoom" type="Sprite2D" parent="."]
texture = ExtResource("1_5n1j4")
centered = false
metadata/_edit_lock_ = true

[node name="TVTextureRect" type="TextureRect" parent="."]
z_index = 2
offset_left = 108.0
offset_right = 2028.0
offset_bottom = 1292.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("2_glg3e")

[node name="MarginContainer" type="MarginContainer" parent="TVTextureRect"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 580
theme_override_constants/margin_bottom = 275

[node name="AllScreen" type="Control" parent="TVTextureRect/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VHSShaderRect" type="ColorRect" parent="TVTextureRect/MarginContainer/AllScreen"]
material = SubResource("ShaderMaterial_os521")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BlankScreenRect" type="ColorRect" parent="TVTextureRect/MarginContainer/AllScreen"]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.129412, 0.27451, 0.14902, 1)

[node name="Screen" type="Control" parent="TVTextureRect/MarginContainer/AllScreen"]
z_index = -1
layout_mode = 2
anchors_preset = 0
offset_right = 1040.0
offset_bottom = 767.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MainMenuUI" type="Control" parent="TVTextureRect/MarginContainer/AllScreen/Screen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="TVTextureRect/MarginContainer/AllScreen/Screen/MainMenuUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_qu7bs")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TVTextureRect/MarginContainer/AllScreen/Screen/MainMenuUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="TVTextureRect/MarginContainer/AllScreen/Screen/MainMenuUI/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 75
theme_override_constants/margin_bottom = 75

[node name="IdiotBox" type="Label" parent="TVTextureRect/MarginContainer/AllScreen/Screen/MainMenuUI/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = SubResource("Theme_ujtui")
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 200
text = "The IDIOT Box"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TVTextureRect/MarginContainer/AllScreen/Screen/MainMenuUI/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 40

[node name="PlayButton" type="Button" parent="TVTextureRect/MarginContainer/AllScreen/Screen/MainMenuUI/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "> PLAY"

[node name="OptionsButton" type="Button" parent="TVTextureRect/MarginContainer/AllScreen/Screen/MainMenuUI/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "> OPTIONS"

[node name="QuitButton" type="Button" parent="TVTextureRect/MarginContainer/AllScreen/Screen/MainMenuUI/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "> QUIT"

[node name="PressAnyButtonLabel" type="Label" parent="TVTextureRect/MarginContainer/AllScreen/Screen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_a3d1u")
theme_override_font_sizes/font_size = 35
text = "Press Any
Button"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TVTextureRect/MarginContainer/AllScreen/Screen/PressAnyButtonLabel"]
libraries = {
"": SubResource("AnimationLibrary_lvxdg")
}
script = ExtResource("9_fjfyb")

[node name="AudioPlayers" type="Node" parent="."]

[node name="StaticNoise" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("11_orsa2")

[node name="MainMenuTheme" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("12_lgb03")
